<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>image-viewer</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.main>com.imageviewer.view.fx.Main</project.main>
        <project.name>image-viewer</project.name>
        <project.version>1.0.0</project.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${project.main}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>jpackage</executable>
                    <arguments>
                        <argument>--type </argument>
                        <argument>exe</argument>
                        <argument>--name</argument>
                        <argument>Image Viewer</argument>
                        <argument>--input</argument>
                        <argument>target/</argument>
                        <argument>--main-class</argument>
                        <argument>${project.main}</argument>
                        <argument>--main-jar</argument>
                        <argument>${project.name}-${project.version}.jar</argument>
                        <argument>--win-shortcut</argument>
                        <argument>--icon</argument>
                        <argument>target/classes/icon.ico</argument>
                        <argument>--module-path</argument>
                        <argument>C:\Program Files\Java\javafx-jmods-21.0.2</argument>
                        <argument>--add-modules</argument>
                        <argument>javafx.controls</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>